--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /GithubTest/src/GithubTest/obj/Debug/net452
+/GithubTest/src/GithubTest/bin/Debug/net452
