--- a/GithubTest/src/GithubTest/project.json
+++ b/GithubTest/src/GithubTest/project.json
@@ -1,7 +1,8 @@
-﻿{
+{
   "userSecretsId": "aspnet-GithubTest-09cf4e56-61f2-4b88-8b28-4e1b5bfe3638",
 
   "dependencies": {
+    "Microsoft.AspNet.WebApi.SelfHost": "5.2.3",
     "Microsoft.AspNetCore.Authentication.Cookies": "1.0.0-rc2-final",
     "Microsoft.AspNetCore.Diagnostics": "1.0.0-rc2-final",
     "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.0.0-rc2-final",
